force-app/main/default/objects/Question_Master__c/Question_Master__c.object-meta.xml
<CustomObject>
    <label>Question Master</label>
    <nameField>
        <displayFormat>QM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>