force-app/main/default/objects/Question_Master__c/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <label>Assessment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Geriatric Depression Scale</fullName>
            </value>
            <value>
                <fullName>Emergency Scenario Assessment</fullName>
            </value>
            <value>
                <fullName>Home Safety Assessment</fullName>
            </value>
            <value>
                <fullName>Family Caregiver Assessment</fullName>
            </value>
            <value>
                <fullName>Home from the Hospital Assessment</fullName>
            </value>
            <value>
                <fullName>Katz ADL Assessment</fullName>
            </value>
            <value>
                <fullName>Balance &amp; Gait Assessment</fullName>
            </value>
            <value>
                <fullName>Quality of Life Assessment</fullName>
            </value>
            <value>
                <fullName>Caregiver Assessment</fullName>
            </value>
            <value>
                <fullName>Nursing Assessment</fullName>
            </value>
            <value>
                <fullName>IADL Assessment</fullName>
            </value>
            <value>
                <fullName>Mini Mental State Examination</fullName>
            </value>
            <value>
                <fullName>Quality of Life Therapeutic Program Assessment</fullName>
            </value>
            <value>
                <fullName>Psychosocial Assessment</fullName>
            </value>
            <value>
                <fullName>Medication Management Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>