force-app/main/default/objects/Question_Master__c/fields/Dependent_On_Question__c.field-meta.xml
<CustomField>
    <fullName>Dependent_On_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent On Question</label>
    <referenceTo>Question_Master__c</referenceTo>
    <relationshipLabel>Question Masters</relationshipLabel>
    <relationshipName>Question_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>