force-app/main/default/objects/Question_Master__c/fields/Notes_Label__c.field-meta.xml
<CustomField>
    <fullName>Notes_Label__c</fullName>
    <label>Notes Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>