force-app/main/default/objects/Question_Master__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>This field is used to store the  section info.</description>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>