force-app/main/default/objects/Question_Master__c/fields/Show_Notes__c.field-meta.xml
<CustomField>
    <fullName>Show_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Notes</label>
    <type>Checkbox</type>
</CustomField>