force-app/main/default/objects/Question_Master__c/fields/Show_When_Value__c.field-meta.xml
<CustomField>
    <fullName>Show_When_Value__c</fullName>
    <label>Show When Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>