force-app/main/default/objects/Question_Master__c/validationRules/Question_Text_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Question_Text_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Question_Text__c)</errorConditionFormula>
    <errorDisplayField>Question_Text__c</errorDisplayField>
    <errorMessage>Question Text is required.</errorMessage>
</ValidationRule>