force-app/main/default/objects/Question_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sequence__c</columns>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Question_Text__c</columns>
    <columns>Active__c</columns>
    <columns>Section__c</columns>
    <columns>Answer_Options__c</columns>
    <columns>Dependent_On_Question__c</columns>
    <columns>Show_When_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assessment_Type__c</field>
        <operation>equals</operation>
        <value>Emergency Scenario Assessment</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>